fix: scrollbar moving in mobile

--- a/styles.css
+++ b/styles.css
@@ -1284,4 +1284,9 @@ footer {
         width: 9px;
         height: 9px;
     }
+
+    .scroll-indicator {
+        position: fixed !important;
+        right: 15px;
+    }
 }
